# MechCAM

./: CMakeLists.txt  MechCAM.qrc
src/: CADObject.cpp  CADObject.h  MechCAM.cpp  MechCAM.h  caddrawing.cpp  caddrawing.h  circle.cpp  circle.h  circledialog.cpp  circledialog.h  contourtoolpath.cpp  contourtoolpath.h  cubic.cpp  cubic.h  fileprocessor.cpp  fileprocessor.h  line.cpp  line.h  lua_integration.cpp  lua_integration.h  machine.h  main.cpp  operationsmanager.cpp  operationsmanager.h  point.cpp  point.h  sketch.cpp  sketch.h  stocksetup.cpp  stocksetup.h  systemconfiguration.cpp  systemconfiguration.h  toolmanager.cpp  toolmanager.h  toolmanager.ui  toolpath.cpp  toolpath.h  types.h  variable.cpp  variable.h  (+2 more)
src/APT_Read/: APTRead.cpp  APTRead.h
src/APT_Write/: APTWrite.h
src/Heeks_Read/: heeks_reader.cpp  heeks_reader.h
src/MechCAM_Read/: mechcam_read.cpp  mechcam_read.h
src/MechCAM_Write/: mechcam_write.cpp  mechcam_write.h
src/STEPNC_Write/: STEPNCWrite.cxx  STEPNCWrite.h  coolant.cxx  cutter.cxx  goto.cxx  idlist.cxx  measures.cxx  ncfunc.cxx  partno.cxx  property.cxx  speed.cxx  units.cxx
